[package]
name = "afterparty"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A github webhook server."
documentation = "http://softprops.github.io/afterparty"
homepage = "https://github.com/softprops/afterparty"
repository = "https://github.com/softprops/afterparty"
keywords = ["github", "ci", "webhook"]
license = "MIT"

[dependencies]
mysql = "0.14"
hyper = "0.6"
rust-crypto = "0.2"
rustc-serialize = "0.3"
time = "0.1"