[package]
name = "afterparty"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A github webhook server."
documentation = "http://softprops.github.io/afterparty"
homepage = "https://github.com/softprops/afterparty"
repository = "https://github.com/softprops/afterparty"
keywords = ["github", "ci", "webhook"]
license = "MIT"
build = "build.rs"

[build-dependencies]
hyper = "0.6"
rustc-serialize = "0.3"
case = "*"

[dependencies]
clap = "1.0"
hyper = "0.6"
rust-crypto = "0.2"
rustc-serialize = "0.3"
log = "0.3"
env_logger = "0.3"