[package]
name = "afterparty"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A github webhook server"
documentation = "http://softprops.github.io/afterparty"
homepage = "https://github.com/softprops/afterparty"
repository = "https://github.com/softprops/afterparty"
keywords = ["github", "ci", "webhook", "hyper"]
license = "MIT"
build = "build.rs"

[build-dependencies]
hyper = "0.7"
case = "0.0"
serde_codegen = "0.6.14"
syntex = "0.29"
serde_json = "0.6"

[dev-dependencies]
env_logger = "0.3"

[dependencies]
hyper = "0.7"
rust-crypto = "0.2"
log = "0.3"
env_logger = "0.3"
serde = "0.6.6"
serde_json = "0.6.0"